--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>疯狂打地鼠</title>
   <link rel="stylesheet" href="css/index.css">
   <script src="./js/index.js"></script>
 </head>
@@ -28,7 +28,7 @@
         <img src="./images/ceb5b008-137a-4acd-8abb-2f95b0a13082.png" alt="" class="img1">
         <p class="p1">
           <img src="./images/021dc6c4-6c55-4c7d-b781-088ae7032880.png" alt="">
-          <span>30</span>
+          <span>10</span>
         </p>
         <p class="p2">
           <img src="./images/4f9e31ae-f7f8-4580-9085-80c7ee6813eb.png" alt="">
@@ -99,7 +99,7 @@
     <!-- 音乐模块 -->
   
     <!-- 结束 -->
-    <audio src="./vudio/904b3a37-0628-412f-a294-5376b03ab06a.mp3" id="endMiose"></audio>
+  
   </div>
 </body>
 </html>
