--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>疯狂打地鼠</title>
 </head>
 <body>
   <!DOCTYPE html>
@@ -13,7 +13,6 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
   <link rel="stylesheet" href="css/index.css">
   <link rel="stylesheet" href="css/home.css">
   <script src="./js/home.js"></script>
